--- a/Demo/src/main/resources/application/logger.fxml
+++ b/Demo/src/main/resources/application/logger.fxml
@@ -2,18 +2,186 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="603.0" prefWidth="736.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.LoggerController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="662.0" prefWidth="763.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.LoggerController">
    <children>
-      <Label text="Logger" textAlignment="CENTER">
+      <Label text="LOGGER" textAlignment="CENTER">
          <font>
             <Font name="URWBookman-Demi" size="26.0" />
          </font></Label>
-      <Pane prefHeight="589.0" prefWidth="753.0" />
+      <GridPane prefHeight="581.0" prefWidth="737.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="200.0" minHeight="200.0" prefHeight="200.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="200.0" minHeight="200.0" prefHeight="200.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="200.0" minHeight="200.0" prefHeight="200.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Label text="API Server" textAlignment="CENTER" textFill="#3a3ab2">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+                  <ListView fx:id="APILogger" prefHeight="200.0" prefWidth="200.0" />
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+               <children>
+                  <Label text="Signaling Server" textAlignment="CENTER" textFill="#3a3ab2">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+                  <ListView fx:id="signalingLogger" prefHeight="200.0" prefWidth="200.0" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" prefHeight="208.0" prefWidth="368.0" GridPane.rowIndex="2">
+               <children>
+                  <Label text="Committee 3" textAlignment="CENTER" textFill="#3a3ab2">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+                  <SplitPane dividerPositions="0.5" prefHeight="182.0" prefWidth="368.0">
+                     <items>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Node 5" textFill="#0f9e0f">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                              <ListView fx:id="fifthLogger" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Node 6" textFill="#0f9e0f">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                              <ListView fx:id="sixthLogger" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                     </items>
+                  </SplitPane>
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <Label text="Committee 4" textAlignment="CENTER" textFill="#3a3ab2">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+                  <SplitPane dividerPositions="0.5" prefHeight="182.0" prefWidth="368.0">
+                     <items>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Node 7" textFill="#0f9e0f">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                              <ListView fx:id="seventhLogger" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Node 8" textFill="#0f9e0f">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                              <ListView fx:id="eighthLogger" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                     </items>
+                  </SplitPane>
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+               <children>
+                  <Label text="Committee 1" textAlignment="CENTER" textFill="#3a3ab2">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+                  <SplitPane dividerPositions="0.5" prefHeight="182.0" prefWidth="368.0">
+                     <items>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Node 1" textFill="#0f9e0f">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                              <ListView fx:id="fstLogger" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Node 2" textFill="#0f9e0f">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                              <ListView fx:id="sndLogger" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                     </items>
+                  </SplitPane>
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <Label text="Committee 2" textFill="#3a3ab2">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+                  <SplitPane dividerPositions="0.5" prefHeight="187.0" prefWidth="368.0">
+                     <items>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Node 3" textFill="#0f9e0f">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                              <ListView fx:id="thrdLogger" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Node 4" textFill="#0f9e0f">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                              </Label>
+                              <ListView fx:id="fourthLogger" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                     </items>
+                  </SplitPane>
+               </children>
+            </VBox>
+         </children>
+      </GridPane>
       <HBox alignment="CENTER" prefHeight="17.0" prefWidth="736.0">
          <children>
             <Button fx:id="loggerButton" mnemonicParsing="false" onAction="#switchToLoggerScene" text="Logger" />
