--- a/Demo/src/main/resources/application/stats.fxml
+++ b/Demo/src/main/resources/application/stats.fxml
@@ -2,19 +2,140 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="603.0" prefWidth="736.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.StatsController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="655.0" prefWidth="832.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.StatsController">
     <children>
         <Label text="Statistics" textAlignment="CENTER">
          <font>
             <Font size="26.0" />
          </font></Label>
-        <Pane prefHeight="559.0" prefWidth="736.0" />
-        <HBox alignment="CENTER" prefHeight="30.0" prefWidth="736.0">
+      <VBox prefHeight="593.0" prefWidth="832.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Total Number Of Login Requests: ">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="loginCnt" text="0" textFill="#f50303">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Total Number of Register Requests: ">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font>
+                  </Label>
+                  <Label fx:id="registerCnt" text="0" textFill="#f50303">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Total Number of Get Balance Requests: ">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+                  <Label fx:id="balanceCnt" text="0" textFill="#f50303">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Total Number Of Buy Requests: ">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+                  <Label fx:id="buyCnt" text="0" textFill="#f50303">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Total Number Of Sell Requests: ">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+                  <Label fx:id="sellCnt" text="0" textFill="#f50303">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Total Number Of Transfer Requests: ">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+                  <Label fx:id="transferCnt" text="0" textFill="#f50303">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Total Number Of Running Nodes: ">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+                  <Label fx:id="nodesCnt" text="0" textFill="#f50303">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Total Number Of Committees: ">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+                  <Label fx:id="committeesCnt" text="0" textFill="#f50303">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Last Block Mined: ">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+                  <Label fx:id="blockIdx" text="Genesis" textFill="#f50303">
+                      <font>
+                          <Font name="System Bold" size="19.0" />
+                      </font></Label>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+        <HBox alignment="BOTTOM_CENTER" prefHeight="30.0" prefWidth="736.0">
             <children>
                 <Button fx:id="loggerButton" mnemonicParsing="false" onAction="#switchToLoggerScene" text="Logger" />
                 <Button fx:id="statsButton" mnemonicParsing="false" onAction="#switchToStatsScene" text="Stats" />
